# GraphKeeper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.eslint.json  vitest.config.ts
docs/: concepts.md  getting-started.md
docs/integrations/: ci.md
python/: LICENSE  README.md  pyproject.toml
python/examples/: README.md
python/examples/01-index-and-query/: build_and_query.py
python/examples/02-agent-json/: report.py
python/examples/03-graceful-degradation/: calls_without_graphify.py
python/src/graphkeeper/: __init__.py  build.py  cli.py  formatters.py  git.py  graphify.py  query.py  store.py  types.py
python/tests/: conftest.py  test_build.py  test_cli.py  test_formatters.py  test_git.py  test_graphify.py  test_query.py  test_store.py
src/: build.ts  cli-lib.ts  cli.ts  git.ts  graphify.ts  index.ts  query.ts  store.ts  types.ts
test/: build.test.ts  cli-lib.test.ts  cli.test.ts  git.test.ts  graphify.test.ts  query.test.ts  store.test.ts  test-helpers.ts
