[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphkeeper-cli"
version = "0.1.1"
description = "Local-first CLI that mines git history for file-level co-change patterns and builds a queryable knowledge graph for AI coding agents, with optional enrichment from graphify's symbol/call-graph output when it is installed."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "Rudrendu Paul" },
  { name = "Sourav Nandy" },
]
keywords = ["cli", "knowledge-graph", "git", "co-change", "code-intelligence", "ai-agent", "agent-native", "graphify", "local-first", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9",
  "build>=1.0,<2",
  "twine>=5.0,<7",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/GraphKeeper"
Repository = "https://github.com/RudrenduPaul/GraphKeeper"
"Bug Tracker" = "https://github.com/RudrenduPaul/GraphKeeper/issues"
Changelog = "https://github.com/RudrenduPaul/GraphKeeper/blob/main/CHANGELOG.md"
Documentation = "https://github.com/RudrenduPaul/GraphKeeper/blob/main/docs/getting-started.md"
"Author - Rudrendu Paul" = "https://github.com/RudrenduPaul"
"Author - Sourav Nandy" = "https://github.com/Sourav-nandy-ai"

[project.scripts]
graphkeeper = "graphkeeper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/graphkeeper"]

[tool.hatch.build.targets.sdist]
include = [
  "src/graphkeeper",
  "tests",
  "README.md",
  "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
